# winnie

./: .gitignore  Cargo.toml  README.md  run.sh  run.sh example output.txt
src/: errors.rs  lib.rs  models.rs  utils.rs
src/methods/: claim.rs  end_phase.rs  mod.rs  new.rs  place_bet.rs  terminate.rs  view.rs  vote_on_outcome.rs
